src/components/HEADER/HeaderContainer.css
.header-container {
}

.menu-container {
  position: relative;
  display: grid;
  grid-template-rows: 0fr;
  width: 333px;
  border: 3px solid var(--clr-secondary);
  border-radius: 0 0 var(--br-size) var(--br-size);
  opacity: 0;
  transition: grid-template-rows 0.4s ease-in-out;
}
.menu-container.open {
  grid-template-rows: 1fr;
  opacity: 1;
}

.menu {
  display: grid;
  grid-template-rows: 0fr;
  position: relative;
  border: none;
  width: 333px;
  opacity: 0;
  /* padding-bottom: 0.5rem;
  padding-top: 0.5rem; */
  transition: transform 0.3s ease-in-out, grid-template-rows 0.4s ease-out;
  /* transform: translateY(-100%); Initial position off-screen */
}
.menu > ul {
  display: none;
  margin: 0 auto;
  padding: 0.5rem;
  overflow: hidden;
}
.menu > ul > li {
  outline: none;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-basis: 50%;
  padding: 0.5rem;
  transition: border-radius 0.5s ease;
}
.menu > ul > li:hover {
  outline: 3px solid var(--clr-secondary);
  border-radius: 1.8rem;
}
.menu > ul > li > a > div > div > svg {
  height: 110px;
}

.menu.open {
  grid-template-rows: 1fr;
  opacity: 1;
  height: min-content;
  margin-bottom: var(--size-850);
  /* transform: translateY(0); Slide the menu into view */
}
.menu.open > ul {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  height: 100%;
  width: 90%;
  margin-top: var(--size-300);
}

.menu-footer {
  background-color: transparent;
  display: flex;
  position: absolute;
  bottom: 0;
  font-size: var(--fs-700);
  font-weight: var(--fw-black);
  justify-content: center;
  align-items: center;
  text-align: center;
  outline: 3px solid var(--clr-secondary);
  border-radius: 0 0 var(--br-size) var(--br-size);
  width: 100%;
  height: var(--size-700);
  transition: background-color 0.5s ease;
  z-index: 9980;
}
.menu.open > .menu-footer {
}

/*----------------------*/
/* SVG MENU ICONS START */

/* GITHUB, PHONE ICONS */
.menu > ul > li > a > .menu-item__active > div > svg > * {
  stroke: var(--clr-main);
}
/* PRINT, INSTA, MAIL ICONS */
.menu > ul > li > a > .menu-item__active > div > svg > g > path {
  stroke: var(--clr-main);
}
.menu > ul > li > a > .menu-item__active > div > svg > g > circle {
  stroke: var(--clr-main);
}
/* HAND DRAWN ICON */
.menu > ul > .active > a > .menu-item__active > div > svg > g > path {
  stroke: var(--clr-main);
}
.menu > ul > .active > a > .menu-item__active > div > svg > g > g > path {
  stroke: var(--clr-main);
}

/* SVG MENU ICONS END */
/*--------------------*/

.menu > ul > .active {
  background-color: var(--clr-secondary);
  border-radius: var(--br-size);
  transition: background-color 0.5s ease;
}
.menu > ul > .active > a > div > div > svg > path {
  stroke: black;
}

/* MENU OPEN BUTTON */
/* ---------------- */

.menu-button-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 333px;
  padding: 0.5rem;
  background-color: var(--clr-secondary);
  border-radius: 0 0 var(--br-size) var(--br-size);
  transition: border-radius 0.1s ease;
  z-index: 9990;
}
.menu-button {
  width: 2rem;
  cursor: pointer;
  margin: 0;
  padding: 0;
  transition: transform 0.3s ease;
  z-index: 9991;
}
.menu-button.rotate {
  transform: rotate(45deg);
}

